--- a/css/obj.css
+++ b/css/obj.css
@@ -78,8 +78,8 @@ div.col-md-3 p{
 	position:center;
 }
 div.col-md-3 img{
-	display:flex;
-	align-items: center;
+	margin-left:-20px;
+	
 
 }
 
@@ -117,8 +117,30 @@ div.col-lg-8 {
 
 
 div.col-lg-8 iframe{
-	
+	margin-left: 200px;
 	height: 650px;
 	width: 890px;
+
+}
+
+div.col-lg-8 h3{
+	
+	color: green;
+	text-align: center;
+	margin:0 auto;
+}	
+
+div.col-lg-12{
+	height: 650px;
+	color: green;
+	background-color: yellow;
+	text-align: center;
+
+
+}
+
+div.col-lg-12 iframe{
+	height:650px;
+	width:1024px;	
 
 }
